templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-app-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: admin-app
---
apiVersion: v1
kind: Service
metadata:
  name: dynamic-app-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: dynamic-app
---
apiVersion: v1
kind: Service
metadata:
  name: web-app-svc
spec:
  type: LoadBalancer
  selector:
    app: web-app
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
