templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "admin.mapsy.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-app-svc
                port:
                  number: 80
    - host: "test.mapsy.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app-svc
                port:
                  number: 8080
    - host: "*.mapsy.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dynamic-app-svc
                port:
                  number: 80
